# paradime-python-sdk

./: .gitignore  AWS_TRIGGERS_README.md  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  pyproject.toml  setup.cfg
.claude/skills/: README.md  integration-quick-ref.skill  new-integration.skill
.github/workflows/: build.yml  publish_to_pypi.yml  verify.yml
docs/: cli-logging-standardisation.md
docs/design/: sdk-ui-manifest.md
examples/: metadata_usage.py
examples/airflow/: README.md  list_dags.py  trigger_dag.py
examples/audit_log/: example.py
examples/bolt/: cancel_run.py  get_artifact.py  list_runs.py  list_schedules.py  retry_run.py  retry_schedule.py  trigger_run.py
examples/catalog/: catalog_refresh.py
examples/custom_integration_basic/: example.py
examples/custom_integration_with_json/: example.py  node_types.json  nodes.json
examples/dinoai_agents/: dinoai-agents-graphql.md  dinoai-agents.md  multi_turn.py  trigger_and_wait.py
examples/hello_world/: example.py
examples/hello_world_with_json/: node_types.json  nodes.json
examples/hex_triggers/: README.md  hex_trigger.py
examples/metadata/: GETTING_STARTED.md  METADATA_EXAMPLES.md  basic_usage.py  discovery_insights.py  list_models.py  list_sources.py  performance_analysis.py  quality_monitoring.py  single_model_status.py  single_source_status.py
examples/qlik_replicate/: example.py
examples/users/: management.py
examples/workspaces/: management.py
paradime/: __init__.py  cli.py  version.py  version_check.py
paradime/apis/: __init__.py  custom_integration.py  custom_integration_types.py  custom_integration_utils.py
paradime/apis/audit_log/: client.py  types.py
paradime/apis/bolt/: __init__.py  cli.py  client.py  exception.py  schedule.py  types.py
paradime/apis/catalog/: client.py
paradime/apis/custom_integration/: client.py  types.py
paradime/apis/dinoai_agents/: __init__.py  client.py  exception.py  types.py
paradime/apis/lineage_diff/: client.py  exception.py  types.py
paradime/apis/metadata/: README.md  __init__.py  client.py  database.py  parsers.py  types.py  utils.py
paradime/apis/users/: client.py  types.py
paradime/apis/workspaces/: client.py  types.py
paradime/cli/: bolt.py  catalog.py  cli.py  console.py  dinoai.py  hex.py  login.py  open.py  rich_text_output.py  run.py  utils.py  version.py
paradime/cli/integrations/: adf.py  airbyte.py  airflow.py  aws_ecs.py  aws_glue.py  aws_lambda.py  aws_sagemaker.py  aws_stepfunctions.py  azure_pipeline.py  census.py  databricks_notebook.py  databricks_workflow.py  datahub.py  fivetran.py  gcp_bigquery_transfer.py  gcp_cloud_function.py  gcp_cloud_run.py  gcp_dataflow.py  gcp_dataproc.py  gcp_datastream.py  gcp_looker.py  github_actions.py  hex.py  hightouch.py  matillion.py  metaplane.py  montecarlo.py  power_bi.py  tableau.py  zapier.py
paradime/client/: api_client.py  api_exception.py  paradime_cli_client.py  paradime_client.py  runtime.py
paradime/core/bolt/: internal_transport.py  schedule.py  timezones.py  yaml_rewriter.py
paradime/core/scripts/: airbyte.py  airflow.py  aws_ecs.py  aws_glue.py  aws_lambda.py  aws_sagemaker.py  aws_stepfunctions.py  azure_data_factory.py  azure_pipeline.py  census.py  databricks_notebook.py  databricks_workflow.py  datahub.py  fivetran.py  gcp_bigquery_transfer.py  gcp_cloud_function.py  gcp_cloud_run.py  gcp_dataflow.py  gcp_dataproc.py  gcp_datastream.py  gcp_looker.py  gcp_utils.py  github_actions.py  hex.py  hightouch.py  matillion.py  metaplane.py  montecarlo.py  power_bi.py  qlik_replicate.py  tableau.py  utils.py  zapier.py
paradime/integrations/: __init__.py  _base.py  cli_builder.py  cli_expression.py
paradime/tools/: pydantic.py
tests/: test_bolt_verify.py  test_integrations.py
tests/flake8/: flake8_pydantic_import_checker.py
tests/scripts/: aws_ecs_test_policy.json  setup_aws_ecs_test_resources.sh  setup_gcp_test_resources.sh  teardown_aws_ecs_test_resources.sh  teardown_gcp_test_resources.sh
