[tool.poetry]
name = "paradime-io"
version = "1.0.0"
description = "Paradime - Python SDK"
authors = ["Bhuvan Singla <bhuvan@paradime.io>"]
readme = "README.md"
packages = [
	{ include = "paradime", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "1.10.14"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240125"
mypy = "^1.8.0"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ["tests"]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
combine_as_imports = true
src_paths = ["paradime"]

[tool.black]
line-length = 100