[tool.poetry]
name = "paradime-io"
version = "4.8.1"
description = "Paradime - Python SDK"
authors = ["Bhuvan Singla <bhuvan@paradime.io>", "Maximilian Mitchell <max@paradime.io>"]
readme = "README.md"
packages = [
	{ include = "paradime", from = "." },
]

[tool.poetry.scripts]
paradime = 'paradime.cli.cli:cli'

[tool.poetry.dependencies]
python = ">=3.8.1"
pydantic = ">=1.10.14,<3.0.0"
requests = "^2.31.0"
click = "^8.1.7"
croniter = "^2.0.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
typer = "^0.12.1"
packaging = ">21.0"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240125"
mypy = "^1.8.0"
black = "^24.2.0"
isort = "^5.13.2"
ruff = "^0.3.5"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ["tests"]
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_reexport = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
combine_as_imports = true
src_paths = ["paradime"]

[tool.black]
line-length = 100